# prime_lin_lili

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/html/: changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/jupyter_execute/: example.ipynb
src/prime_ll3707/: __init__.py  prime_ll3707.py
tests/: prime_ll3707.py  test_prime_ll3707.py
