[tool.poetry]
name = "prime_ll3707"
version = "0.1.0"
description = "A python package for MDS HW08!"
authors = ["Lili Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
autoapi = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
