[tool.poetry]
name = "prime_ll3707"
version = "0.1.0"
description = "A python package for MDS HW07!"
authors = ["Lili Lin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "^7.2.6"
autoapi = "^1.7.0"


[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.3.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
myst-nb = "*"
sphinx-autoapi = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
